Fix image width on mobile

--- a/pages/static_src/styles/blocks.scss
+++ b/pages/static_src/styles/blocks.scss
@@ -25,6 +25,7 @@
   width: auto;
   height: auto;
   max-height: 75vh;
+  max-width: 100%;
 }
 
 .block-embed {
